# Archipelago

./: BaseClasses.py  CommonClient.py  HadesClient.py  MultiServer.py  NetUtils.py  Options.py  Utils.py  __init__.py  kvui.py  pyproject.toml  setup.py
worlds/: AutoWorld.py  LauncherComponents.py
worlds/hades/: Items.py  Locations.py  Options.py  Regions.py  __init__.py
worlds/hades/docs/: en_Hades.md
