[project]
name = "archipelago"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
description = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"." = "archipelago"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
  "/.github",
  "/docs",
  "/data",
  "**/test/**",
  "/setup.py",
  "/.gitignore",
  "/LICENSE",
  "/WebHostLib",
  "*.yaml",
  "*.yml",
  "*.ini",
  "*.toml",
  "*.txt",
  "*.md",
  "*.iss"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/data"
]