[project]
name = "archipelago"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
description = ""
dependencies = [
  "colorama>=0.4.5",
  "websockets>=11.0.3",
  "PyYAML>=6.0",
  "jellyfish>=0.11.2",
  "jinja2>=3.1.2",
  "schema>=0.7.5",
  "kivy>=2.2.0",
  "bsdiff4>=1.2.3",
  "platformdirs>=3.5.1",
  "maseya-z3pr>=1.0.0rc1",
  "xxtea>=3.0.0",
  "factorio-rcon-py>=2.0.1",
  "Pymem>=1.10.0",
  "requests >= 2.28.1",
  "nest-asyncio >= 1.5.5",
  "six >= 1.16.0",
  "apsc2 >= 5.6",
  "bsdiff4>=1.2.2",
  "pip>=20.2.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"." = "archipelago"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
  "/.github",
  "/docs",
  "/data",
  "**/test/**",
  "/setup.py",
  "/.gitignore",
  "/LICENSE",
  "/WebHostLib",
  "*.yaml",
  "*.yml",
  "*.ini",
  "*.toml",
  "*.md",
  "*.iss"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/data"
]