[project]
name = "archipelago"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
description = ""
dependencies = [
  "colorama>=0.4.5",
  "websockets>=11.0.3",
  "PyYAML>=6.0",
  "jellyfish>=0.11.2",
  "jinja2>=3.1.2",
  "schema>=0.7.5",
  "kivy>=2.2.0",
  "bsdiff4>=1.2.3",
  "platformdirs>=3.5.1",
  "pip>=20.2.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"." = "archipelago"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
  "/.github",
  "/docs",
  "**/test/**",
  "/setup.py",
  "/.gitignore",
  "/LICENSE",
  "/WebHostLib",
  "*.yaml",
  "*.yml",
  "*.ini",
  "*.toml",
  "*.md",
  "*.iss"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/data"
]